<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Track it down</string>
    <string name="action_settings">Settings</string>
    <string name="btn_start">Start</string>
    <string name="btn_customGm">Create custom game</string>
    <string name="btn_exit">Exit</string>
    <string name="title_activity_level_selection_view">Level Selection</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_startGame">Start new game</string>
    <string name="title_activity_game">Take It Down</string>
    <string name="lunar_layout_text_text">linar</string>
    <string name="btn_startLvl1">1</string>
    <string name="btn_startLvl2">2</string>
    <string name="btn_startLvl3">3</string>
    <string name="img_desc">image</string>
    <string name="circle_not_touched">Please Touch a circle!</string>
    <string name="touch_an_other_circle">Please touch an other circle</string>
    <string name="hint_lvl1_observe">Keep an eye on the ball.</string>
    <string name="hint_lvl1_seek">Do not to lose site of it.</string>
    <string name="hint_lvl1_chose">Chose the tagged ball</string>
    <string name="lvl_locked_open_msj">Level currently locked. Win previous levels until here to unlock it.</string>
    <string name="custom_game_pref_title">Select caracteristics for custom game</string>
    <string name="ball_collor_pref_name">Color if the balls</string>
    <string name="win_ball_color_pref_name">Color for balls to track</string>
    <string name="use_blink_pref_name">Use blink?</string>
    <string name="use_blink_pref_sumary">Checking this will enable the blinking feature.</string>
    <string name="ball_speed_pref_name">Speed of the balls</string>
    <string name="title_activity_custom_game_settings">CustomGameSettings</string>
    <string name="custom_game_ball_no">No. of balls:</string>
    <string name="custom_game_winning_ball_no">No. of balls to track:</string>
	<string name="custom_game_ball_size">The size of the balls</string>
	<string name="customGame_startGameBtnTxt">Start</string>
</resources>
