<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".CustomGameSettings" 
android:screenOrientation="portrait"
android:background="@drawable/bk_home">

    <!--                        -->
    <!-- The size of the balls  -->
    <!--                        -->
    <TableRow
        android:id="@+id/tableRow2.5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/ball_size_lb"
            android:text="@string/custom_game_ball_size"
            android:textColor="@color/custom_view_text_color"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/ball_size_spin"
			android:entries="@array/ball_size_values_array"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"/>
    </TableRow>
    
    <!--                           -->
    <!-- The total number of balls -->
    <!--                           -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/total_ball_numberLb"
            android:text="@string/custom_game_ball_no"
            android:textColor="@color/custom_view_text_color"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/ball_no_spin"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"/>
    </TableRow>
    
    
    <!--                             -->
    <!-- The number of winning balls -->
    <!--                             -->
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/win_ball_numberLb"
            android:text="@string/custom_game_winning_ball_no"
            android:textColor="@color/custom_view_text_color"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/win_ball_no_spin"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"/>
    </TableRow>
    
    
    
    <!--                        -->
    <!-- The speed of the balls -->
    <!--                        -->
     <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	   	<TextView 
	   	    android:id="@+id/ball_speed_lb"
	   	    android:text="@string/ball_speed_pref_name"
          android:textColor="@color/custom_view_text_color"
          android:textStyle="bold"/>
		<Spinner 
			android:id="@+id/circSpeedspin"
			android:entries="@array/ball_speeds_entry_array"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	</TableRow>
   
    
    <!--                   -->
    <!-- Use blink feature -->
    <!--                   -->
	<TableRow
	 android:id="@+id/tableRow5"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content" >
		<CheckBox 
		    android:id="@+id/use_bkink_chk"
		    android:text="@string/use_blink_pref_name"
		    android:layout_span="2"
        android:textColor="@color/custom_view_text_color"
        android:textStyle="bold"/>
			
	</TableRow>
     
	
    <!--                                -->
    <!-- The color of the regular balls -->
    <!--                                -->
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	   <TextView 
	       android:id="@+id/circColorSpinLb"
	       android:text="@string/ball_collor_pref_name"
         android:textColor="@color/custom_view_text_color"
         android:textStyle="bold"/>
	   <Spinner 
	       android:id="@+id/circColorSpin"
	       android:entries="@array/ball_color_entry_array"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"/>
    </TableRow>

    
    <!--                               -->
    <!-- The color of the winner balls -->
    <!--                               -->
    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	   <TextView 
	       android:id="@+id/wincircColorSpinLb"
	       android:text="@string/win_ball_color_pref_name"
         android:textColor="@color/custom_view_text_color"
         android:textStyle="bold"/>
	   <Spinner 
	       android:id="@+id/wincircColorSpin"
	       android:entries="@array/ball_color_entry_array"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"/>
    </TableRow>
    
    <!--                             -->
    <!--   The start game button     -->
    <!--                             -->
    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/customGame_startGameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customGame_startGameBtnTxt"
            android:onClick="startCustomGame"/>
    </TableRow>


</TableLayout>

